[package]
name = "engineer"
description = "The engineer is a master builder!"
authors = ["immmdreza MohammadReza"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/immmdreza/engineer"
documentation = "https://github.com/immmdreza/engineer"
repository = "https://github.com/immmdreza/engineer"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engineer_derive = { version = "0.1.0", path = "../engineer_derive" }
