[package]
name = "engineer"
description = "The engineer is a master builder!"
authors = ["immmdreza MohammadReza"]
version = "0.1.6"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/immmdreza/engineer"
documentation = "https://github.com/immmdreza/engineer"
repository = "https://github.com/immmdreza/engineer"
readme = "../README.md"
workspace = ".."
keywords = ["rust", "builder", "crate", "option", "codegen"]
categories = ["data-structures", "rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engineer_derive = { version = "0.1.6", path = "../engineer_derive" }
