[package]
name = "engineer_derive"
description = "The engineer is a master builder! And this's it's derive."
authors = ["immmdreza MohammadReza"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/immmdreza/engineer"
documentation = "https://github.com/immmdreza/engineer"
repository = "https://github.com/immmdreza/engineer"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0"
quote = "1.0"
darling = "0.14.2"
proc-macro2 = "1.0"

[lib]
proc-macro = true
